# ViewerByVNC

./: .gitignore  CMakeLists.txt  README.md
include/net/: tcp_connect.hpp
include/rfb/: rfb_core.hpp
src/app/: main.cpp
src/net/: tcp_connect.cpp
src/rfb/: rfb_core.cpp
